2006-09-06  Mark D. Baushke  <mdb@gnu.org>

	[bug #17560]
	* rcs.c (apply_rcs_changes): Fix the merge algorithm from O(n^2)
	to O(n).
	(Based on a patch submitted by Michael Smith.)

2006-09-02  Mark D. Baushke  <mdb@gnu.org>

	* cvs.h: Remove unprotected config.h include to avoid SIZE_MAX
	redefinition warning.
	* cvsrc.c, error.c, exithandle.c, expand_path.c, hardlink.c,
	login.c, myndbm.c, scramble.c, stack.c, vers_ts.c, version.c,
	zlib.c: Include <config.h> now that cvs.h is no longer doing it.
	* Makefile.in: Regenerated.

2006-08-29  Derek Price  <derek@ximbiot.com>

	* sanity.sh (rmadd-20): Execute in proxy mode so the sticky tag still
	changes for the rest of the tests.

2006-08-28  Derek Price  <derek@ximbiot.com>

	* recurse.c (do_recursion): Remove misguided assertion.
	* sanity.sh (dottedroot-3): Add test for the above.
	(Thanks to report from Paul Eggert <eggert@CS.UCLA.EDU>.)

	[bug #17168]
	* classify.c (Classify_File): Use T_PATCH for changed keywords instead
	of T_CHECKOUT to conserver bandwidth.  Don't sticky check when marking
	files for update anyhow.
	* sanity.sh: Update to compensate (s/^U /[UP] /).

2006-08-25  Derek Price  <derek@ximbiot.com>

	* sanity.sh (ls-d-init-11): Verify output of CVS run.

	[bug #17168]
	* classify.c (Classify_file): Mark files with potential keyword
	substitution changes as needing update.
	* sanity.sh: Update to compensate.
	(keyword, keywordname, serverpatch): Update to compensate, removing
	the last few "checksum failed" tests.

	* classify.c (Classify_File): Remove hacks which worked around checksum
	failures from bug #17032.

2006-08-24  Derek Price  <derek@ximbiot.com>

	[bug #17032]
	* update.c (patch_file): Correctly recreate client working files
	containing the RCS `Name' keyword before generating patches.
	* sanity.sh (keyword-23r): Merge with local case to compensate.

2006-08-19  Mark D. Baushke  <mdb@gnu.org>

	* sanity.sh (close-stdout): An error from lib/closeout.c will